# mac-app-kill

./: README.md  package.json  setup.cfg  setup.py
scripts/: app-kill
