# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-app-kill
version = 2019.4.22
url = https://github.com/looking-for-a-job/mac-app-kill
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = mac app

[options]
install_requires = 
	setuptools
scripts = 
	scripts/app-kill
